--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -19,10 +19,11 @@
           %em= "(#{@minimum_password_length} characters minimum)"
         = f.password_field :password, autocomplete: "off", class: "form-control"
 
+      .form-group
         = f.label :password_confirmation
         = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
-
-      = f.submit "Sign Up", class: "btn btn-default"
+      .form-group
+        = f.submit "Sign Up", class: "btn btn-default"
 
     = render "devise/shared/links"
