--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,13 +1,20 @@
 %body
   %header.navbar.navbar-static-top.navbar-inverse
     .container
-      = link_to "SpeedRunRacing", root_path, id: "logo"
-      %nav
+      .navbar-header
+        %button.navbar-toggle.collapsed{type: "button", "data-toggle" => "collapse", "data-target" => "#global-nav"}
+          %span.sr-only Toggle navigation
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{href: root_path}
+          %span SpeedRunRacing
+      .collapse.navbar-collapse#global-nav
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li.dropdown
               %a.dropdown-toggle{"data-toggle" => "dropdown", "href" => "#"}
-                = current_user.username
+                = current_user.display_name
                 %span.caret
               %ul.dropdown-menu{"role" => "menu"}
                 %li= link_to "Profile", edit_user_registration_path
