--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -33,8 +33,29 @@
 
       = f.submit "Update", class: "btn btn-default"
 
+  .col-md-6
+    .panel.panel-default
+      .panel-body{style: 'background: rgba(100, 65, 164, 1); color: #fff;'}
+        %span 
+          - if @current_user.twitch_name.present?
+            ✓ Linked with Twitch as
+            %b= @current_user.twitch_name
+            .pull-right
+              %i.btn.btn-default.disabled Not unlinkable
+          - else
+            Not linked with Twitch
+            .pull-right
+              = button_to 'Link', '/auth/twitch', method: :get, class: 'btn btn-default'
+      .panel-footer
+        .row
+          .col-md-12
+            - if @current_user.twitch_name.present?
+              %a.btn.btn-default{href: "https://twitch.tv/#{@current_user.twitch_name}", target: '_blank'} Visit my Twitch channel
+            - else
+              You will not be able to particiapte in races until you link a Twitch account.
+  .col-md-6
     %h3 Delete Account
 
-    %p
+    %center
       This is an irreversable action, only click the button if you are 100% sure you want to erase everything!
       = button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger inline-button"
