--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,9 +1,3 @@
 %footer.footer
-  %div{style: "text-align: center;"}
-    %a{href: '#'} Contact Us
-    |
-    %a{href: "https://www.github.com/batedurgonnadie/salty_bot", target: "_blank"} Bot Repo
-    |
-    %a{href: "https://www.github.com/batedurgonnadie/salty_web", target: "_blank"} Web Repo
-    |
-    %a{href: "https://webchat.freenode.net/?channels=#saltybot", target: "_blank"} IRC Channel
+  .pull-right
+    %a{href: 'https://github.com/batedurgonnadie/speedrunracing'} Github
