Add a bunch of shell stuff for games and categories
Migrations broken, drop db and re-migrate.  Redo how alerts are shown becuase device likes to put random shit in there.  Add delayed job for action cable.  Add a race cable and channel for global race updates.  Uupdate gems and readme.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,10 +12,6 @@
   %body
     = render 'layouts/header'
     .container
-      - flash.each do |key, value|
-        %div{class: "alert alert-#{key} alert-dismissible fade in", role: "alert"}
-          %button{type: "button", class: "close", "data-dismiss" => "alert", "aria-label" => "Close"}
-            %span{"aria-hidden" => "true"} &times;
-          = value
+      = render partial: 'shared/alerts'
       = yield
       = render 'layouts/footer'
