--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,6 +4,7 @@
     %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %title= yield(:title) || "SpeedRunRacing!"
+    = Gon::Base.render_data
     = stylesheet_link_tag "application.css"
     = javascript_include_tag "application.js", async: Rails.env.production?, defer: Rails.env.production?
     = csrf_meta_tags
