--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -10,6 +10,14 @@
         %a.navbar-brand{href: root_path}
           %span SpeedRunRacing
       .collapse.navbar-collapse#global-nav
+        %ul.nav.navbar-nav
+          %li.dropdown
+            %a.dropdown-toggle{"data-toggle" => "dropdown", "href" => "#"}
+              Races
+              %span.caret
+            %ul.dropdown-menu{"role" => "menu"}
+              %li= link_to "Actice Races", races_path
+              %li= link_to "Completed Races", completed_races_path
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li.dropdown
@@ -17,7 +25,9 @@
                 = current_user.display_name
                 %span.caret
               %ul.dropdown-menu{"role" => "menu"}
-                %li= link_to "Profile", edit_user_registration_path
+                %li= link_to "View Profile", user_public_profile_path(current_user)
+                %li.divider{role: "separator"}
+                %li= link_to "Edit Profile", edit_user_registration_path
                 %li= link_to "Log Out", destroy_user_session_path, method: :delete
           - else
             %li= link_to "Sign In", new_user_session_path
