Only show race creation button if logged in
It wouldn't work when logged out anyways

--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -12,7 +12,8 @@
     .tab-content
       - @game.categories.each_with_index do |c, i|
         .tab-pane{'id' => "#{c.id}", 'class' => "#{i==0 ? 'active' : ''}"}
-          %h3
-            %button{'class' => 'btn btn-default btn-create-race', 'data-category' => "#{c.id}"}
-              = "Create Race for #{c.name}"
+          - if current_user
+            %h3
+              %button{'class' => 'btn btn-default btn-create-race', 'data-category' => "#{c.id}"}
+                = "Create Race for #{c.name}"
           = "Insert races for #{c.name}"
