--- a/app/assets/stylesheets/races.scss
+++ b/app/assets/stylesheets/races.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the races controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.table > tbody > tr > td {
+    vertical-align: middle;
+}
