--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -18,6 +18,7 @@
             %ul.dropdown-menu{"role" => "menu"}
               %li= link_to "Actice Races", races_path
               %li= link_to "Completed Races", completed_races_path
+          %li= link_to "Games", games_path
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             %li.dropdown
