--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,3 +1,21 @@
 = provide(:title, "Search for Games")
 
-
+.panel.panel-default
+  .panel-heading Games
+  .panel-body
+    %table.table.table-striped.table-hover
+      %thead
+        %tr
+          %th Cover
+          %th Name
+          %th Shortname
+          %th # of Races
+      %tbody
+        - @games.each do |game|
+          %td
+            %img{src: game.cover_small}
+          %td= link_to game.name, game_path(game)
+          %td= game.shortname
+          %td= game.completed_races_count
+    .center
+      = paginate @games, theme: 'twitter-bootstrap-3'
