--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -1,4 +1,21 @@
 = provide(:title, "#{@race.game.name} - #{@race.category.name}")
-%h2
-  = link_to "#{@race.game.name}", game_path(@race.game)
-  = " - #{@race.category.name}"
+- user_active = @race.contains_user?(current_user)
+- race_progress = @race.in_progress?
+.col-md-6
+  %h4
+    = link_to "#{@race.game.name}", game_path(@race.game)
+    = " - #{@race.category.name}"
+.col-md-1
+  %h4
+    - if race_progress
+      %button.btn.btn-danger.btn-abandon-race Abandon Race
+    - else
+      %button.btn.btn-success.btn-join-race{class: "#{user_active ? 'hidden' : 'show'}"} Join Race
+      %button.btn.btn-danger.btn-part-race{class: "#{user_active ? 'show' : 'hidden'}"} Part Race
+.col-md-1
+  %h4
+    %button.btn.btn-success.btn-done-race{class: "#{race_progress ? '' : 'disabled'}"} Done!
+
+.col-md-4
+  %h4#entrants-list
+    Add entrants table here
