--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -8,7 +8,7 @@
     = link_to "#{@race.game.name}", game_path(@race.game)
     = " - #{@race.category.name}"
 .col-md-1
-  %button.btn.btn-success.btn-join-race{class: user_active && !race_progress ? 'hidden' : 'show'}
+  %button.btn.btn-success.btn-join-race{class: user_active && !race_progress ? 'hidden' : 'show', disabled: race_progress}
     Join Race
   %button.btn.btn-danger.btn-part-race{class: user_active && !race_progress ? 'show' : 'hidden'}
     Part Race
@@ -35,7 +35,7 @@
             %td.name-column
               = e.user.display_name
             %td.ready-column
-              .glyphicon{class: e.ready ? 'glyphicon-ok text-success' : 'glyphicon-remove text-danger'}
+              %i.glyphicon{class: e.ready ? 'glyphicon-ok text-success' : 'glyphicon-remove text-danger'}
             %td.time-column
               .format-time
                 = e.finished? ? e.duration : '-'
