--- a/app/views/shared/_race_table.haml
+++ b/app/views/shared/_race_table.haml
@@ -16,7 +16,7 @@
               %img{src: race.game.cover_small}
             %td= link_to "#{race.game.name} - #{race.category.name}", race_path(race)
             %td= race.entrants.count
-            %td= race.status_text
+            %td{class: race_color(race)}= race.status_text
             %td
               - if race.started?
                 .updating-time= race.start_time
