--- a/app/views/shared/_race_buttons.haml
+++ b/app/views/shared/_race_buttons.haml
@@ -2,7 +2,7 @@
 - join_class = !@race.started? && !current_entrant ? 'show' : 'hidden'
 - part_class = !@race.started? && current_entrant ? 'show' : 'hidden'
 - abandon_class = @race.in_progress? && current_entrant ? 'show': 'hidden'
-- ready_class = !@race.started? ? 'show' : 'hidden'
+- ready_class = !@race.started? && current_entrant && !current_entrant.ready ? 'show' : 'hidden'
 - unready_class = !@race.started? && current_entrant && current_entrant.ready ? 'show' : 'hidden'
 - done_class = @race.in_progress? && current_entrant ? 'show' : 'hidden'
 - rejoin_class = @race.in_progress? && current_entrant && current_entrant.finished? ? 'show' : 'hidden'
