--- a/app/views/devise/passwords/edit.haml
+++ b/app/views/devise/passwords/edit.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-offset-3.col-md-6.col-md-offset-3
-    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
       = f.hidden_field :reset_password_token
 
