--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -11,7 +11,8 @@
         = @race.status_text
   .col-md-4
     %h4
-      #race-duration{class: !@race.finished? ? "updating-time" : "format-time", data: {race_start_time: @race.start_time}}
+      %span Race Time: 
+      %span#race-duration.format-time{class: !@race.finished? ? "updating-time" : "", data: {duration: @race.duration || 0}}
         = @race.started? ? @race.duration : "0:00"
 
 .col-md-4
