--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -11,8 +11,8 @@
         = @race.status_text
   .col-md-4
     %h4
-      %span Race Time: 
-      %span#race-duration.format-time{class: !@race.finished? ? "updating-time" : "", data: {duration: @race.duration || 0}}
+      %span Race Time:
+      %span#race-duration.format-time{class: @race.started? ? "updating-time" : "", data: {duration: @race.duration || 0}}
         = @race.started? ? @race.duration : "0:00"
 
 .col-md-4
