--- a/app/views/shared/_race_table.haml
+++ b/app/views/shared/_race_table.haml
@@ -19,6 +19,6 @@
             %td{class: race_color(race)}= race.status_text
             %td
               - if race.started?
-                .updating-time{data: {start_time: race.start_time.to_formatted_s(:iso8601)}}= race.start_time
+                .updating-time{data: {start_time: race.start_time.try(:to_formatted_s, :iso8601)}}= race.start_time
               - else
                 = "-"
