add basic alertifyjs support
just adds the files for the time being, this will be used to show errors from the websocket connection

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,8 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
 @import "bootswatch/cyborg/bootswatch";
+@import "alertifyjs/build/css/alertify";
 
 @import "races";
 
