Fully utilize alertify.js
This should be a clean way to display all the errors that can be thrown in the UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,11 +6,12 @@
 @import "alertifyjs/build/css/alertify";
 
 @import "races";
+@import "custom_alertify";
 
 .alert-notice {
     @extend .alert-info;
 }
 
 .alert-alert {
-  @extend .alert-danger;
+    @extend .alert-danger;
 }
