--- a/app/views/shared/_race_table.haml
+++ b/app/views/shared/_race_table.haml
@@ -1,24 +1,38 @@
 .panel.panel-default
-  .panel-heading Active Races
+  .panel-heading= description
   .panel-body
     %table.table.table-striped.table-hover
       %thead
         %tr
-          %th Game & Category
-          %th
-          %th Entrants
-          %th Status
-          %th Time
+          - if cols.include?(:game_cat)
+            %th Game & Category
+            %th
+          - if cols.include?(:entrants)
+            %th Entrants
+          - if cols.include?(:status_text)
+            %th Status
+          - if cols.include?(:duration)
+            %th Time
+          - if cols.include?(:finished)
+            %th Finished
       %tbody
         - @races.each do |race|
           %tr{'data-href' => "#{race_path(race)}"}
-            %td
-              %img{src: race.game.cover_small}
-            %td= link_to "#{race.game.name} - #{race.category.name}", race_path(race)
-            %td= race.entrants.count
-            %td{class: race_color(race)}= race.status_text
-            %td
-              - if race.started?
-                .updating-time{data: {start_time: race.start_time.try(:to_formatted_s, :iso8601)}}= race.start_time
-              - else
-                = "-"
+            - if cols.include?(:game_cat)
+              %td
+                %img{src: race.game.cover_small}
+              %td= link_to "#{race.game.name} - #{race.category.name}", race_path(race)
+            - if cols.include?(:entrants)
+              %td= race.entrants.count
+            - if cols.include?(:status_text)
+              %td{class: race_color(race)}= race.status_text
+            - if cols.include?(:duration)
+              %td
+                - if race.finished?
+                  .format-time= race.duration
+                - elsif race.started?
+                  .updating-time{data: {start_time: iso_time_string(race.start_time)}}= race.start_time
+                - else
+                  = "-"
+            - if cols.include?(:finished)
+              %td.format-past= iso_time_string(race.start_time)
