--- a/app/views/shared/_alerts.haml
+++ b/app/views/shared/_alerts.haml
@@ -5,3 +5,6 @@
     %button{type: "button", class: "close", "data-dismiss" => "alert", "aria-label" => "Close"}
       %span{"aria-hidden" => "true"} &times;
     = value
+%noscript
+  %div{class: "alert alert-warning", role: "alert"}
+    This website will not work properly without javascript enable. You have been warned.
