--- a/app/views/races/completed.haml
+++ b/app/views/races/completed.haml
@@ -1,2 +1,6 @@
 = provide(:title, 'Completed Races')
+.center
+  = paginate @races
 = render partial: 'shared/race_table', locals: race_table_locals(:completed_races, @races)
+.center
+  = paginate @races
