--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 
 @import "races";
 @import "custom_alertify";
+@import "chat";
 
 .alert-notice {
     @extend .alert-info;
@@ -14,4 +15,12 @@
 
 .alert-alert {
     @extend .alert-danger;
+}
+
+.center {
+    text-align: center;
+}
+
+footer {
+    margin-top: 1em;
 }
