--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -3,6 +3,8 @@
 .panel.panel-default
   .panel-heading Games
   .panel-body
+    .center
+      = paginate @games, theme: 'twitter-bootstrap-3'
     %table.table.table-striped.table-hover
       %thead
         %tr
