--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -31,34 +31,32 @@
         = f.label :current_password
         = f.password_field :current_password, autocomplete: "off", class: "form-control"
 
-      = f.submit "Update", class: "btn btn-default"
+      .form-group
+        = f.submit "Update", class: "btn btn-default"
 
 .row
   .col-md-6
-    .panel.panel-default
-      .panel-body{style: 'background: rgba(100, 65, 164, 1); color: #fff;'}
-        %span 
-          - if @current_user.twitch_name.present?
-            ✓ Linked with Twitch as
-            %b= @current_user.twitch_name
-            .pull-right
-              %i.btn.btn-default.disabled Not unlinkable
-          - else
-            Not linked with Twitch
-            .pull-right
-              = button_to 'Link', '/auth/twitch', method: :get, class: 'btn btn-default'
-      .panel-footer
-        .row
-          .col-md-12
-            - if @current_user.twitch_name.present?
-              %a.btn.btn-default{href: "https://twitch.tv/#{@current_user.twitch_name}", target: '_blank'} Visit my Twitch channel
-            - else
-              You will not be able to particiapte in races until you link a Twitch account.
+    .panel.panel-info
+      .panel-heading Link Twitch Account
+      .panel-body
+        - if @current_user.twitch_name.present?
+          ✓ Linked with Twitch as
+          %b= @current_user.twitch_name
+          .pull-right
+            %i.btn.btn-default.disabled Not unlinkable
+        - else
+          You will not be able to particiapte in races until you link a Twitch account.
+      .panel-footer.center
+        - if @current_user.twitch_name.present?
+          %a.btn.btn-info{href: "https://twitch.tv/#{@current_user.twitch_name}", target: '_blank'} Visit my Twitch channel
+        - else
+          = button_to 'Link', '/auth/twitch', method: :get, class: 'btn btn-info'
+
   .col-md-6
     .panel.panel-danger
       .panel-heading
         Delete my account
-      .panel-footer
+      .panel-body
         This is an irreversable action, only click the button if you are 100% sure you want to erase everything!
-        %center
-          = button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"
+      .panel-footer.center
+        = button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"
