add 2 faqs that might come up

--- a/app/views/static/faq.haml
+++ b/app/views/static/faq.haml
@@ -1,2 +1,10 @@
 = provide(:title, 'FAQ')
-No content here yet
+.question
+  %h5 How do I start a race?
+  Races will start automatically when it has 2 or more entrants and all entratns have
+  readied up. A countdown will show and then you'll be going fast!
+
+.question
+  %h5 Why do I have to link my Twitch account to race?
+  In order to prevent cheating, all races must be streamed. Currently Twitch is the
+  only streaming platform available.
