--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -16,7 +16,7 @@
               Races
               %span.caret
             %ul.dropdown-menu{role: "menu"}
-              %li= link_to "Actice Races", races_path
+              %li= link_to "Active Races", races_path
               %li= link_to "Completed Races", completed_races_path
           %li= link_to "Games", games_path
           %li= link_to "FAQ", faq_path
