--- a/app/views/static/faq.haml
+++ b/app/views/static/faq.haml
@@ -1,7 +1,7 @@
 = provide(:title, 'FAQ')
 .question
   %h5 How do I start a race?
-  Races will start automatically when it has 2 or more entrants and all entratns have
+  Races will start automatically when it has 2 or more entrants and all entrants have
   readied up. A countdown will show and then you'll be going fast!
 
 .question
