--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -7,6 +7,7 @@
 #chat-menu {
     font-size: 2.5em;
     color: white;
+    background: rgb(25, 25, 25);
 }
 
 #message-input-box {
@@ -28,5 +29,7 @@
     font-size: 1.2em;
     overflow-y: auto;
     padding-bottom: .5em;
+    padding-right: .5em;
     margin-bottom: 0em;
+    word-wrap: break-word;
 }
