test sorting entrants on the ruby side

--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -25,7 +25,7 @@
           %th Time
           %th Place
       %tbody
-        - @race.entrants.each do |e|
+        - @race.sorted_entrants.each do |e|
           %tr{'id' => "entrant-id-#{e.id}", 'data-entrant-id' => e.id}
             %td.name-column
               = e.user.display_name
